deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jukebox-ingress
  namespace: jukebox
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: my-traefik
  rules:
    - host: jukebox.rromani.eu
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: jukebox-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jukebox-frontend
                port:
                  number: 80
